fix(playground): header alignment

--- a/playground/src/_assets/less/App.less
+++ b/playground/src/_assets/less/App.less
@@ -38,11 +38,12 @@ code {
   }
 }
 
-.ant-layout-header {
+.header {
+  align-items: center;
+  display: flex;
   background: black;
-  height: 64px;
-  padding: 0 5px;
-  margin: 10px 10px 10px 10px;
+  padding: 15px 5px;
+  margin: 10px;
 }
 
 // font
